--- a/docs/course/CS258/0316-aep.md
+++ b/docs/course/CS258/0316-aep.md
@@ -66,15 +66,17 @@ $$2^{-n(H(X)+\epsilon)} \leq p\left(X_{1}, X_{2}, \dots, X_{n}\right) \leq 2^{-n
 **Properties**
 1. If $\left(x_{1}, x_{2}, \ldots, x_{n}\right) \in A_{e}^{(n)},$ then $H(X)-\epsilon \leq-\frac{1}{n} \log p\left(x_{1}, x_{2}, \ldots, x_{n}\right) \leq H(X)+\epsilon$
    **Proof.** 见上一节的概念导出
-2. 典型集中所有元素概率之和接近于1. $\operatorname{Pr}\left\{A_{\epsilon}^{(n)}\right\} \geq 1-\epsilon$ for $n$ sufficiently large.
+2. 典型集中所有元素概率之和接近于1. $\Pr\left\{A_{\epsilon}^{(n)}\right\} \geq 1-\epsilon$ for $n$ sufficiently large.
    **Proof.** 由AEP, 我们知道给定任意$\epsilon$, 对任意$\delta > 0$, 存在$n_0$,对任意$n>n_0$, 
    $$\Pr\left\{\left| -\frac{1}{n} \log p\left(X_{1}, X_{2}, \ldots, X_{n}\right)-H(X) \right| > \epsilon\right\} < \delta$$
    equivalently,
-   $$\operatorname{Pr}\left\{\left|-\frac{1}{n} \log p\left(X_{1}, X_{2}, \ldots, X_{n}\right)-H(X)\right|<\epsilon\right\}>1-\delta$$
+
+   $$\Pr\left\{\left|-\frac{1}{n} \log p\left(X_{1}, X_{2}, \ldots, X_{n}\right)-H(X)\right|<\epsilon\right\}>1-\delta$$
+
    注意典型集的定义, 有
-   $$\operatorname{Pr}\left\{A_{\epsilon}^{(n)}\right\}= \operatorname{Pr}\left\{\left|-\frac{1}{n} \log p\left(X_{1}, X_{2}, \ldots, X_{n}\right)-H(X)\right|<\epsilon\right\}$$
+   $$\Pr\left\{A_{\epsilon}^{(n)}\right\}= \Pr\left\{\left|-\frac{1}{n} \log p\left(X_{1}, X_{2}, \ldots, X_{n}\right)-H(X)\right|<\epsilon\right\}$$
    Setting $\delta=\epsilon$,
-   $$\operatorname{Pr}\left\{A_{\epsilon}^{(n)}\right\} \geq 1-\epsilon$$
+   $$\Pr\left\{A_{\epsilon}^{(n)}\right\} \geq 1-\epsilon$$
 3. 典型集的大小存在上界:$\left|A_{e}^{(n)}\right| \leq 2^{n(H(X)+\epsilon)},$ where $|A|$ denotes the number of elements in the set $A$
    **Proof.**
    $$\begin{aligned}
@@ -87,12 +89,12 @@ $$2^{-n(H(X)+\epsilon)} \leq p\left(X_{1}, X_{2}, \dots, X_{n}\right) \leq 2^{-n
     进一步, 我们可以说明
     $$\frac{\left|\boldsymbol{A}_{\epsilon}^{(\boldsymbol{n})}\right|}{\left|x^{n}\right|} \leq \mathbf{2}^{n(\boldsymbol{H}(\boldsymbol{X})-\log |\boldsymbol{x}|)} \rightarrow \mathbf{0}$$
     (在X非均匀分布时,$H(X)<\log{|X|}$)
-    Recall:性质2实质说明了$\operatorname{Pr}\left(x^{n}\right) \approx \operatorname{Pr}\left(A_{\epsilon}^{(n)}\right)$, 结合这两点我们可以获得如图所示的典型集的直观理解.
+    Recall:性质2实质说明了$\Pr\left(x^{n}\right) \approx \Pr\left(A_{\epsilon}^{(n)}\right)$, 结合这两点我们可以获得如图所示的典型集的直观理解.
     ![](./img/0316-1.png)
 4. $\left|A_{\epsilon}^{(n)}\right| \geq(1-\epsilon) 2^{n(H(X)-\epsilon)}$ for $n$ sufficiently large.
-   **Proof.** For sufficiently large $n, \operatorname{Pr}\left\{A_{\epsilon}^{(n)}\right\}>1-\epsilon,$ so that
+   **Proof.** For sufficiently large $n, \Pr\left\{A_{\epsilon}^{(n)}\right\}>1-\epsilon,$ so that
    $$\begin{aligned}
-    & 1-\epsilon<\operatorname{Pr}\left\{A_{e}^{(n)}\right\} \\
+    & 1-\epsilon<\Pr\left\{A_{e}^{(n)}\right\} \\
     \leq & \sum_{x \in A_{\epsilon}^{(n)}} 2^{-n(H(X)-\epsilon)} \\
     =& 2^{-n(H(X)-e)}\left|A_{e}^{(n)}\right|
     \end{aligned}$$
@@ -101,21 +103,21 @@ $$2^{-n(H(X)+\epsilon)} \leq p\left(X_{1}, X_{2}, \dots, X_{n}\right) \leq 2^{-n
 ### High Probability Set
 给出更宽泛的定义, 高概率集
 **Definition** For each $n=1,2, \ldots,$ let $B_{\delta}^{(n)} \subseteq x^{n}$ be the smallest set with
-$$\operatorname{Pr}\left\{B_{\delta}^{(n)}\right\} \geq 1-\delta$$
+$$\Pr\left\{B_{\delta}^{(n)}\right\} \geq 1-\delta$$
 
-**Theorem** 高概率集元素大小的下界 Let $X_{1}, X_{2}, \ldots, X_{n}$ be i.i.d $\sim p(x) .$ For $\delta<\frac{1}{2}$ and any $\delta^{\prime}>0,$ if $\operatorname{Pr}\left\{B_{\delta}^{(n)}\right\} \geq 1-\delta,$ then 
+**Theorem** 高概率集元素大小的下界 Let $X_{1}, X_{2}, \ldots, X_{n}$ be i.i.d $\sim p(x) .$ For $\delta<\frac{1}{2}$ and any $\delta^{\prime}>0,$ if $\Pr\left\{B_{\delta}^{(n)}\right\} \geq 1-\delta,$ then 
 $$\frac{1}{n} \log \left|B_{\delta}^{(n)}\right|>H-\delta^{\prime}$$
 for $n$ sufficiently large.
 
 高概率集和$2^{nH}$是同阶的, 我们可以说典型集可能是最小的高概率集.
 
 **Intuition** As $A_{\epsilon}^{(n)}$ has $2^{n(H \pm \epsilon)}$ elements, $\left|B_{\delta}^{(n)}\right|$ and $\left|A_{\epsilon}^{(n)}\right|$ are equal to the first order in the exponent
-Idea: 高概率集和典型集的概率分布的交集应该也是很大的, 否则缺失会比较严重, 会与1有明显的差距. 因此我们的证明就是研究$\operatorname{Pr}\left(A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}\right)$
+Idea: 高概率集和典型集的概率分布的交集应该也是很大的, 否则缺失会比较严重, 会与1有明显的差距. 因此我们的证明就是研究$\Pr\left(A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}\right)$
 
-**Proof.** For any two sets $A, B,$ if $\operatorname{Pr}(A) \geq 1-\epsilon_{1} \operatorname{Pr}(B) \geq 1-\epsilon_{2},$ then $\operatorname{Pr}(A \cap B)>1-\epsilon_{1}-\epsilon_{2}$ 首先从概率意义上得到一个trivial的结论
+**Proof.** For any two sets $A, B,$ if $\Pr(A) \geq 1-\epsilon_{1} \Pr(B) \geq 1-\epsilon_{2},$ then $\Pr(A \cap B)>1-\epsilon_{1}-\epsilon_{2}$ 首先从概率意义上得到一个trivial的结论
 
 $$\begin{array}{l}
-1-\epsilon-\delta \leq \operatorname{Pr}\left(A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}\right)=\sum_{A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}} p\left(x^{n}\right) \leq \sum_{A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}} 2^{-n(H-\epsilon)} \\ 
+1-\epsilon-\delta \leq \Pr\left(A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}\right)=\sum_{A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}} p\left(x^{n}\right) \leq \sum_{A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}} 2^{-n(H-\epsilon)} \\ 
 =\left|A_{\epsilon}^{(n)} \cap B_{\delta}^{(n)}\right| 2^{-n(H-\epsilon)} \leq\left|B_{\delta}^{(n)}\right| 2^{-n(H-\epsilon)}
 \end{array}$$
 得出结论: 高概率集必定占据了典型集大部分的空间
@@ -157,10 +159,11 @@ $$\begin{aligned}
 E\left(l\left(X^{n}\right)\right) &=\sum_{x^{n}} p\left(x^{n}\right) l\left(x^{n}\right) \\
 &=\sum_{x^{n} \in A_{\epsilon}^{(n)}} p\left(x^{n}\right) l\left(x^{n}\right)+\sum_{x^{n} \in A_{\epsilon}^{(n)}} p\left(x^{n}\right) l\left(x^{n}\right) \\
 & \leq \sum_{x^{n} \in A_{\epsilon}^{(n)}} p\left(x^{n}\right)(n(H+\epsilon)+2)+\sum_{x^{n} \in A_{\epsilon}^{(n)}} p\left(x^{n}\right)(n \log |x|+2) \\
-&=\operatorname{Pr}\left\{A_{\epsilon}^{(n)}\right\}(n(H+\epsilon)+2)+\operatorname{Pr}\left\{\left(A_{\epsilon}^{(n)}\right)^{c}\right\}(n \log |x|+2) \\
+&=\Pr\left\{A_{\epsilon}^{(n)}\right\}(n(H+\epsilon)+2)+\Pr\left\{\left(A_{\epsilon}^{(n)}\right)^{c}\right\}(n \log |x|+2) \\
 & \leq n(H+\epsilon)+\epsilon n(\log |x|)+2 \\
-&=n\left(H+\epsilon^{\prime}\right) \text{ (}\epsilon^{\prime}\text{是另一个同样一阶的无穷小量)}
+&=n\left(H+\epsilon^{\prime}\right) 
 \end{aligned}$$
+($\epsilon^{\prime}$是另一个同样一阶的无穷小量)
 
 导出平均长度的期望值是以$H(X)$为上界的
 $$E\left[\frac{1}{n} l\left(X^{n}\right)\right] \leq H(X)+\epsilon$$
