--- a/docs/course/CS258/0318-rate.md
+++ b/docs/course/CS258/0318-rate.md
@@ -37,8 +37,8 @@ A stochastic process $\left\{X_{i}\right\}$ is an indexed sequence of random var
 stationary (稳态) if the **joint distribution** of _**any subset**_ **of the sequence of random variables is invariant** with respect to shifts in the time
 index; that is, 任意随机变量的分布按照时间平移,得到的联合概率分布是不变的.
 $$\begin{aligned}
-& \operatorname{Pr}\left\{X_{1}=x_{1}, X_{2}=x_{2}, \ldots, X_{n}=x_{n}\right\} \\
-=& \operatorname{Pr}\left\{X_{1+l}=x_{1}, X_{2+l}=x_{2}, \ldots, X_{n+l}=x_{n}\right\}
+& \Pr\left\{X_{1}=x_{1}, X_{2}=x_{2}, \ldots, X_{n}=x_{n}\right\} \\
+=& \Pr\left\{X_{1+l}=x_{1}, X_{2+l}=x_{2}, \ldots, X_{n+l}=x_{n}\right\}
 \end{aligned}$$
 for every $n$ and every shift $l$ and for all $x_{1}, x_{2}, \ldots, x_{n} \in X$
 
@@ -61,10 +61,10 @@ $$H\left(X_{0} | X_{-1}, X_{-2}, \dots, X_{-n}\right)=H\left(X_{0} | X_{1}, X_{2
 ### Markov Chain
 
 The Markov chain is said to be **time invariant** if the conditional probability $p\left(x_{n+1} | x_{n}\right)$ does not depend on $n ;$ that is, for $n=1,2, \ldots$
-$$\operatorname{Pr}\left\{X_{n+1}=b | X_{-} n=a\right\}=\operatorname{Pr}\left\{X_{2}=b | X_{1}=a\right\} \quad \text{for all } a, b \in X$$
+$$\Pr\left\{X_{n+1}=b | X_{-} n=a\right\}=\Pr\left\{X_{2}=b | X_{1}=a\right\} \quad \text{for all } a, b \in X$$
 We will assume that the Markov chain **is time invariant unless otherwise stated**
 A time-invariant Markov chain is characterized by its initial state =and a probability transition matrix $P=\left[P_{i j}\right], i, j \in\{1,2, \ldots, m\},$ where
-$$P_{i j}=\operatorname{Pr}\left\{X_{n+1}=j | X_{n}=i\right\}$$
+$$P_{i j}=\Pr\left\{X_{n+1}=j | X_{n}=i\right\}$$
 Example:
 - Gambler's ruin
 - Random Walk
