--- a/docs/course/CS258/0323-comp.md
+++ b/docs/course/CS258/0323-comp.md
@@ -22,10 +22,10 @@ Week 4 of 2020 Spring
 
 Let $X$ be a random variable with the following distribution and codeword assignment:
 $$\begin{array}{ll}
-\operatorname{Pr}(X=1)=1 / 2, & \text { codeword } C(1)=0 \\
-\operatorname{Pr}(X=2)=1 / 4, & \text { codeword } C(2)=10 \\
-\operatorname{Pr}(X=3)=1 / 8, & \text { codeword } C(3)=110 \\
-\operatorname{Pr}(X=4)=1 / 8, & \text { codeword } C(4)=111
+\Pr(X=1)=1 / 2, & \text { codeword } C(1)=0 \\
+\Pr(X=2)=1 / 4, & \text { codeword } C(2)=10 \\
+\Pr(X=3)=1 / 8, & \text { codeword } C(3)=110 \\
+\Pr(X=4)=1 / 8, & \text { codeword } C(4)=111
 \end{array}$$
 
 - Without of loss of generality, we can assume that the $D$ -ary alphabet is $\mathcal{D}=$ $\{0,1, \ldots, D-1\}$. 二进制中,D=2
