--- a/docs/course/CS258/0325-comp2.md
+++ b/docs/course/CS258/0325-comp2.md
@@ -53,9 +53,9 @@ Week 4 of 2020 Spring
 
 ![](./img/03-25-10-12-31.png)
 
-> A probability distribution $\operatorname{Pr}(X)$ is called **$D$ -adic** if each of the probabilities
+> A probability distribution $\Pr(X)$ is called **$D$ -adic** if each of the probabilities
 > $$
-> \operatorname{Pr}\left(X=x_{i}\right)=D^{-n}
+> \Pr\left(X=x_{i}\right)=D^{-n}
 > $$
 > for some $n$
 > - 因为如果概率分布满足D-adic, 那么可以保证取完对数后可以得到整数值. For a $D$ -adic distribution, the optimal solution in Lagrange is unique: $l_{i}=\log \frac{1}{p_{i}}=n_{i}$ 与上一节的香农码的优化问题对应.
@@ -186,16 +186,16 @@ The average codeword length is 2.75 bits and the entropy is 1.75 bits. The Huffm
 
 > (Optimality) Let $l(x)$ be the codeword lengths associated with the Shannon code, and let $l^{\prime}(x)$ be the codeword lengths associated with any other uniquely decodable code. Then
 > $$
-> \operatorname{Pr}\left(l(x) \geq l^{\prime}(x)+c\right) \leq \frac{1}{2^{c-1}}
+> \Pr\left(l(x) \geq l^{\prime}(x)+c\right) \leq \frac{1}{2^{c-1}}
 > $$
 > Hence, no other code can do much better than the Shannon code most of the time 注意,是具体码制的随机变量,而不是平均码长, 不与Huffman矛盾.
 
 For example, the probability that $l^{\prime}(X)$ is 5 or more bits shorter than $l(X)$ is less than $\frac{1}{16}$
 $$
 \begin{aligned}
-\operatorname{Pr}\left(l(X) \geq l^{\prime}(X)+c\right) &=\operatorname{Pr}\left(\left\lceil\log \frac{1}{p(X)}\right\rceil \geq l^{\prime}(X)+c\right) \\
-& \leq \operatorname{Pr}\left(\log \frac{1}{p(X)} \geq l^{\prime}(X)+c-1\right) \\
-&=\operatorname{Pr}\left(p(X) \leq 2^{-l^{\prime}(X)-c+1}\right) \\
+\Pr\left(l(X) \geq l^{\prime}(X)+c\right) &=\Pr\left(\left\lceil\log \frac{1}{p(X)}\right\rceil \geq l^{\prime}(X)+c\right) \\
+& \leq \Pr\left(\log \frac{1}{p(X)} \geq l^{\prime}(X)+c-1\right) \\
+&=\Pr\left(p(X) \leq 2^{-l^{\prime}(X)-c+1}\right) \\
 &=\sum_{x: p(x) \leq 2^{-l^{\prime}(x)-c+1}} p(x) \\
 & \leq \sum_{x: p(x) \leq 2^{-l^{\prime}(x)-c+1}} 2^{-l^{\prime}(x)-(c-1)} \\
 & \leq \sum_{x} 2^{-l^{\prime}(x)} 2^{-(c-1)} \\
