--- a/docs/course/CS258/0330-comp3.md
+++ b/docs/course/CS258/0330-comp3.md
@@ -191,7 +191,7 @@ where $q_{\pi}(x)=\sum_{\theta} \pi(\theta) p_{\theta}(x)$
 
 ## Arithmetic Coding
 
-> Recall: Shannon-Fano-Elias Coding: $F(a)=\operatorname{Pr}(x \leq a)$
+> Recall: Shannon-Fano-Elias Coding: $F(a)=\Pr(x \leq a)$
 > $$l(x)=\left\lceil\frac{1}{p(x)}\right\rceil+1$$
 > $$H(X) \leq E(l(x))<H(X)+2$$
 > Motivation: using intervals to represent symbols
