--- a/docs/course/EI338/1128_sync.md
+++ b/docs/course/EI338/1128_sync.md
@@ -1,5 +1,5 @@
 ---
-title: Synchronization Tools
+title: OS6 - Synchronization Tools
 url: se2-sync
 date: 2020-11-27 15:09:50
 tags: 
@@ -75,7 +75,7 @@ S0: producer execute register1 = counter            {register1 = 5}
 S1: producer execute register1 = register1 + 1      
 {register1 = 6, but does not write back to counter cache} 
 S2: consumer execute register2 = counter            {register2 = 5}
-S3: consumer execute register2 = register2 – 1      {register2 = 4}
+S3: consumer execute register2 = register2 - 1      {register2 = 4}
 S4: producer execute counter = register1            {counter = 6 }
 S5: consumer execute counter = register2            {counter = 4}
 ```
@@ -119,8 +119,8 @@ S5: consumer execute counter = register2            {counter = 4}
 
 ### Critical-Section Handling in OS
 - Two approaches depending on if kernel is preemptive or non- preemptive
-  - Preemptive – allows preemption of process when running in kernel mode
-  - Non-preemptive – runs until exits kernel mode, blocks, or voluntarily yields CPU
+  - Preemptive - allows preemption of process when running in kernel mode
+  - Non-preemptive - runs until exits kernel mode, blocks, or voluntarily yields CPU
     - Essentially free of race conditions in kernel mode
     > Though simple, modern OS won't take this approach
 
@@ -213,7 +213,7 @@ This allows **both processes to be in their critical section** at the same time!
 ## Hardware Support for Synchronization 
 
 - Many systems provide hardware support for implementing the critical section code.
-- Uniprocessors – could disable interrupts
+- Uniprocessors - could disable interrupts
   - Currently running code would execute without preemption
   - **Generally too inefficient** :( on multiprocessor systems
     - Operating systems using this not broadly scalable
@@ -226,9 +226,9 @@ This allows **both processes to be in their critical section** at the same time!
 
 - **Memory model** are the memory guarantees a computer architecture makes to application programs.
 - Memory models may be either:
-  - **Strongly ordered** – where a memory modification of one processor is immediately visible to all other processors.
+  - **Strongly ordered** - where a memory modification of one processor is immediately visible to all other processors.
   > 改了立刻知道
-  - **Weakly ordered** – where a memory modification of one processor may not be immediately visible to all other processors.
+  - **Weakly ordered** - where a memory modification of one processor may not be immediately visible to all other processors.
   > 改了不立刻知道
 - A **memory barrier** is an instruction that **forces** any change in memory to be propagated (made visible) to all other processors.
 > The performance is surely to be affected
@@ -408,7 +408,7 @@ These two functions must be implemented atomically. Both test-and-set and compar
 > E.g. In producer/consumer, the buffer size is "equivalent" to `s`
 
 - Synchronization tool that provides more sophisticated ways (than Mutex locks) for process to synchronize their activities.
-- Semaphore S – integer variable
+- Semaphore S - integer variable
 - Can only be accessed via two indivisible (atomic) operations
   - `wait()` and `signal()`
     - (Originally called `P()` and `V()`)
@@ -432,8 +432,8 @@ These two functions must be implemented atomically. Both test-and-set and compar
 ### Usage
 
 
-- **Counting semaphore** – integer value can range over an unrestricted domain
-- **Binary semaphore** – integer value can range only between 0 and 1 
+- **Counting semaphore** - integer value can range over an unrestricted domain
+- **Binary semaphore** - integer value can range only between 0 and 1 
   -  Same as a mutex lock
 - Can solve various synchronization problems
 - Consider `P1` and `P2` that require `S1` to happen before `S2`
@@ -503,7 +503,7 @@ These two functions must be implemented atomically. Both test-and-set and compar
   - `signal (mutex) .... wait (mutex)`
   - `wait (mutex) ... wait (mutex)`
   - Omitting of `wait (mutex)` and/or `signal (mutex)`
-- These – and others – are examples of what can occur when sempahores and other synchronization tools are used incorrectly.
+- These - and others - are examples of what can occur when sempahores and other synchronization tools are used incorrectly.
 
 > Users are easy to write bugs! especially when control flow is complex
 
@@ -531,8 +531,8 @@ monitor monitor-name
 
 - condition x, y;
 - Two operations are allowed on a condition variable:
-  - `x.wait()` – a process that invokes the operation is suspended until `x.signal()`
-  - `x.signal()` – resumes one of processes (if any) that invoked x.wait()
+  - `x.wait()` - a process that invokes the operation is suspended until `x.signal()`
+  - `x.signal()` - resumes one of processes (if any) that invoked x.wait()
     - If no `x.wait()` on the variable, then it has no effect on the variable
 > For every variable(condition), we maintain them separately, and the linked list will be adjusted dynamically
 
@@ -664,7 +664,7 @@ monitor ResourceAllocator
 
 ### DeadLock
 
-- Deadlock – two or more processes are waiting indefinitely for an event that can be caused by only one of the waiting processes
+- Deadlock - two or more processes are waiting indefinitely for an event that can be caused by only one of the waiting processes
 - Let S and Q be two semaphores initialized to 1
 ![](./img/12-04-14-28-26.png)
 - Consider if `P0` executes `wait(S)` and `P1` `wait(Q)`. When `P0` executes `wait(Q)`, it must wait until `P1` executes `signal(Q)`
@@ -674,9 +674,9 @@ monitor ResourceAllocator
 > Later we will discuss some special strategies to escape deadlock
 
 ### Other forms of deadlock:
-- **Starvation** – indefinite blocking
+- **Starvation** - indefinite blocking
   - A process may never be removed from the semaphore queue which it is suspended
-- **Priority Inversion** – Scheduling problem when lower- priority process holds a lock needed by higher-priority process
+- **Priority Inversion** - Scheduling problem when lower- priority process holds a lock needed by higher-priority process
   > 调度上的优先级和同步机制（锁的存在）不协调，实际的优先级降低了
   - Solved via **priority-inheritance protocol**
 
