--- a/docs/course/EI339/1023_rl2.md
+++ b/docs/course/EI339/1023_rl2.md
@@ -69,7 +69,7 @@ categories:
 ### Analysis: Regret
 - Even if you learn the optimal policy, you still make mistakes along the way!
 - Regret is a measure of your total mistake cost: the difference between your (expected) rewards, including youthful suboptimality, and optimal (expected) rewards
-- Minimizing regret goes beyond learning to be optimal – it requires optimally learning to be optimal
+- Minimizing regret goes beyond learning to be optimal - it requires optimally learning to be optimal
 - Example: random exploration and exploration functions both end up optimal, but random exploration has higher regret
   > i.e. random exploratin has a higher probability that it makes regretable explorations
 
