--- a/docs/course/EI339/1110_bn.md
+++ b/docs/course/EI339/1110_bn.md
@@ -21,7 +21,7 @@ categories:
 - Models are always simplifications 
   - May not account for every variable
   - May not account for all interactions between variables 
-  - “All models are wrong; but some are useful.” – George E. P. Box
+  - “All models are wrong; but some are useful.” - George E. P. Box
 - What do we do with probabilistic models?
   - We (or our agents) need to reason about unknown variables, given evidence
   - Example: explanation (diagnostic reasoning 诊断推理)
