--- a/docs/course/EI339/1204_hmm.md
+++ b/docs/course/EI339/1204_hmm.md
@@ -1,5 +1,5 @@
 ---
-title: Hidden Markov Models
+title: 13-2 Hidden Markov Models
 url: ai-hmm
 date: 2020-12-04 10:12:07
 tags: 
@@ -66,8 +66,8 @@ categories:
 ### Mini-Forward Algorithm
 $$
 \begin{array}{c}
-P\left(X_{2}=\mathrm{sun}\right)=P\left(X_{2}=\operatorname{sun} \mid X_{1}=\operatorname{sun}\right) P\left(X_{1}=\operatorname{sun}\right)+ \\
-P\left(X_{2}=\operatorname{sun} \mid X_{1}=\operatorname{rain}\right) P\left(X_{1}=\mathrm{rain}\right) = 0.9 \cdot 1.0+0.3 \cdot 0.0=0.9
+P\left(X_{2}=\mathrm{sun}\right)=P\left(X_{2}=\mathrm{sun} \mid X_{1}=\mathrm{sun}\right) P\left(X_{1}=\mathrm{sun}\right)+ \\
+P\left(X_{2}=\mathrm{sun} \mid X_{1}=\mathrm{rain}\right) P\left(X_{1}=\mathrm{rain}\right) = 0.9 \cdot 1.0+0.3 \cdot 0.0=0.9
 \end{array}
 $$
 
@@ -77,7 +77,7 @@ $$
 \left(X_{1}\right) \rightarrow\left(X_{2}\right) \rightarrow\left(X_{3}\right) \rightarrow\left(X_{4}\right)-\cdots \\
 P\left(x_{1}\right)=\text { known } \\
 P\left(x_{t}\right)=\sum_{x_{t-1}} P\left(x_{t-1}, x_{t}\right) \\
-\quad=\sum_{x_{t-1}}\underbrace{ P(x_{t} \mid \left.x_{t-1}\right) P\left(x_{t-1}\right)}_{\text {Forward simulation }}
+\quad=\sum_{x_{t-1}} { P(x_{t} \mid \left.x_{t-1}\right) P\left(x_{t-1}\right)}_{\text {(Forward simulation) }}
 \end{array}
 $$
 
