--- a/docs/course/CS222/1019_dp.md
+++ b/docs/course/CS222/1019_dp.md
@@ -56,11 +56,11 @@ Ex. $p(8)=5,p(7)=3,p(2)=0$.
 
 **Case 1**. OPT selects job j.
 - Collect profit $v_j$.
-- Can't use incompatible jobs $\{ p(j) + 1, p(j) + 2, ..., j – 1 \}$.
+- Can't use incompatible jobs $\{p(j) + 1, p(j) + 2, ..., j - 1\}$.
 - Must include optimal solution to problem consisting of remaining compatible jobs $1, 2, ..., p(j)$.
   > To be found by subproblems
 **Case 2**. OPT does not select job j.
-- Must include optimal solution to problem consisting of remaining compatible jobs 1, 2, ..., j – 1.
+- Must include optimal solution to problem consisting of remaining compatible jobs 1, 2, ..., j - 1.
 
 > Now we can Write a recurrence
 ![](./img/10-19-13-12-49.png)
@@ -146,7 +146,7 @@ Given n points in the plane: $(x_1, y_1), (x_2, y_2) , ..., (x_n, y_n)$ with $x_
 **To Compute `OPT(j)`**...
 > We can choose any point before, and add an extra line to include the points after it
 - Last segment uses points $p_i, p_{i+1}, \ldots, p_j$ for some i.
-- $Cost = e(i,j) + c + OPT(i–1)$.
+- $Cost = e(i,j) + c + OPT(i-1)$.
   > optimal substructure property (proof via exchange argument)
  
 ![](./img/10-19-13-42-52.png)
@@ -186,7 +186,7 @@ $$
 **Def**. `OPT(i)` = max profit subset of items $1, ..., i$. 
 
 **Case 1**. OPT does not select item i.
-- OPT selects best of { 1, 2, ..., i – 1 }.
+- OPT selects best of { 1, 2, ..., i - 1 }.
   > OK: optimal substructure property (proof via exchange argument)
 **Case 2**. OPT selects item i. 
 - Selecting item i does not immediately imply that we will have to reject other items.
@@ -200,10 +200,10 @@ Conclusion. Need more subproblems!
 
 **Def**. `OPT(i, w)` = max profit subset of items 1, ..., i with weight limit w. 
 **Case 1**. OPT does not select item i.
-- OPT selects best of { 1, 2, ..., i – 1 } using weight limit w.
+- OPT selects best of { 1, 2, ..., i - 1 } using weight limit w.
 **Case 2**. OPT selects item i.
-- New weight limit = $w – w_i$.
-- OPT selects best of { 1, 2, ..., i – 1 } using this new weight limit.
+- New weight limit = $w - w_i$.
+- OPT selects best of { 1, 2, ..., i - 1 } using this new weight limit.
 
 > Now in both cases: **optimal substructure property (proof via exchange argument)**
 
@@ -227,7 +227,7 @@ Pf.
 - Takes O(1) time per table entry.
 - There are $\Theta(n W)$ table entries.
 - After computing optimal values, can trace back to find solution:
-  - take item i in `OPT(i,w)` iff `M[i,w] > M[i–1,w]`.
+  - take item i in `OPT(i,w)` iff `M[i,w] > M[i-1,w]`.
 
 
 
@@ -250,8 +250,8 @@ Pf.
 **Secondary structure.** RNA is single-stranded so it tends to loop back and form base pairs with itself. This structure is essential for understanding behavior of molecule.
 
 **Secondary structure.** A set of pairs S = { ($b_i$, $b_j$) } that satisfy: 
-- [Watson-Crick] S is a matching and each pair in S is a Watson-Crick complement: A–U, U–A, C–G, or G–C.
-- [No sharp turns] The ends of each pair are separated by at least 4 intervening bases. If $(b_i, b_j) \in S$, then i < j – 4.
+- [Watson-Crick] S is a matching and each pair in S is a Watson-Crick complement: A-U, U-A, C-G, or G-C.
+- [No sharp turns] The ends of each pair are separated by at least 4 intervening bases. If $(b_i, b_j) \in S$, then i < j - 4.
 - [Non-crossing] If $(b_i, b_j)$ and $(b_k, b_l)$ are two pairs in S, then we cannot have i < k < j < l.
 
 **Free energy**. Usual hypothesis is that an RNA molecule will form the secondary structure with the minimum total free energy.
@@ -275,13 +275,13 @@ Pf.
 **Notation.** `OPT(i,j)=` maximum number of base pairs in a secondary structure of the substring $b_i b_{i+1} \ldots b_j$
 
 
-**Case 1**. If $i \ge j–4$.
+**Case 1**. If $i \ge j-4$.
 - `OPT(i, j) = 0` by no-sharp turns condition.
 **Case 2.** Base $b_j$ is not involved in a pair. 
-- `OPT(i, j) = OPT(i, j – 1)`.
-**Case 3.** Base $b_j$ pairs with $b_t$ for some $i \le t < j – 4$.
+- `OPT(i, j) = OPT(i, j - 1)`.
+**Case 3.** Base $b_j$ pairs with $b_t$ for some $i \le t < j - 4$.
 - Noncrossing constraint decouples resulting subproblems. 
-- `OPT(i, j) =` $1 + \max_t \{ OPT(i, t – 1) + OPT(t + 1, j – 1) \}$ where $i \le t < j-4$ and $b_t$ and $b_j$ are complements.
+- `OPT(i, j) =` $1 + \max_t \{ OPT(i, t - 1) + OPT(t + 1, j - 1) \}$ where $i \le t < j-4$ and $b_t$ and $b_j$ are complements.
 
 > Note: no-crossing is an important condition since it clearly decompose the problem into two subproblems(with no other dirty work).
 
