--- a/docs/course/CS222/1019_dp2.md
+++ b/docs/course/CS222/1019_dp2.md
@@ -36,8 +36,8 @@ Use mismatches and gap to compare strings.
 
 **Goal.** Given two strings $x_1, x_2, ... x_m$ and $y_1, y_2, ..., y_n$ find min cost alignment.
 
-**Def.**  An alignment M is a set of ordered pairs $x_i – y_j$ such that each item occurs in at most one pair and no crossings. 
-- crossing is $x_i –y_j$ and $x_i^{\prime} –y_j^{\prime}$ cross if $i<i'$,but $j>j'$
+**Def.**  An alignment M is a set of ordered pairs $x_i - y_j$ such that each item occurs in at most one pair and no crossings. 
+- crossing is $x_i -y_j$ and $x_i^{\prime} -y_j^{\prime}$ cross if $i<i'$,but $j>j'$
 
 **Def**. The cost of an alignment M is:
 
@@ -47,11 +47,11 @@ Use mismatches and gap to compare strings.
 
 **Def**. OPT(i, j) = min cost of aligning prefix strings $x_1,x_2, ..., x_i$ and $y_1, y_2, ...,y_j$. 
 
-**Case 1**. OPT matches $x_i – y_j$.
-Pay mismatch for $x_i – y_j$ + min cost of aligning $x_1, x_2, ..., x_{i–1}$ and $y_1, y_2, ... y_{j–1}$. 
+**Case 1**. OPT matches $x_i - y_j$.
+Pay mismatch for $x_i - y_j$ + min cost of aligning $x_1, x_2, ..., x_{i-1}$ and $y_1, y_2, ... y_{j-1}$. 
 
 **Case 2a**. OPT leaves $x_i$ unmatched.
-Pay gap for $x_i$ + min cost of aligning $x_1, x_2, ..., x_{i–1}$ and $y_1, y_2, ... y_{j}$.
+Pay gap for $x_i$ + min cost of aligning $x_1, x_2, ..., x_{i-1}$ and $y_1, y_2, ... y_{j}$.
 
 **Case 2b**. OPT leaves $y_j$ unmatched.
 Pay gap for $y_j$ + min cost of aligning $x_1, x_2, ..., x_{i}$ and $y_1, y_2, ... y_{j-1}$.
@@ -75,7 +75,7 @@ Pay gap for $y_j$ + min cost of aligning $x_1, x_2, ..., x_{i}$ and $y_1, y_2, .
 **A**. Easy to compute optimal value in $O(mn)$ time and $O(m + n)$ space.
 > Note, when we are computing `M[i,j]`, we only need `M[i-1,j]`, `M[i,j-1]` and `M[i-1,j-1]`
 > A simple implementation: We only need two rows of data, update them as we go forward
-- Compute `OPT(i, •)` from `OPT(i – 1, •)`.
+- Compute `OPT(i, •)` from `OPT(i - 1, •)`.
 - **But**, no longer easy to recover optimal alignment itself.
   > The following algorithm can keep space complexity small while preserving the possibility of recovering
 
@@ -124,7 +124,7 @@ Edit distance graph.
 
 
 **Lemma1:** if negative cycles exist, no shortest path can be found.
-**Lemma2:** If G has no negative cycles, then there exists a cheapest path from v to t that is simple ( and has $\le n–1$ edges). (Otherwise, we can remove the cycle)
+**Lemma2:** If G has no negative cycles, then there exists a cheapest path from v to t that is simple ( and has $\le n-1$ edges). (Otherwise, we can remove the cycle)
 > Gives an upper bound of the DP solution
 
 
@@ -134,7 +134,7 @@ Edit distance graph.
 
 **Def.** Given terminal `v`, $OPT(i,v)$=cost of shortest path from v to t that use $\le i$ edges.
 **Case 1:** Cheapest $v \sim t$ path uses $\leq i-1$ edges.
-- $O P T(i, v)=\operatorname{OPT}(i-1, v)$
+- $O P T(i, v)=\mathrm{OPT}(i-1, v)$
 **Case 2:** Cheapest $v \sim t$ path uses exactly $i$ edges.
 - if $(v, w)$ is first edge, then $O P T$ uses $(v, w),$ and then selects best $w \sim t$ path using $\leq i-1$ edges
 
@@ -179,7 +179,7 @@ each node $v$ in $\Theta(m n)$ time and $\Theta\left(n^{2}\right)$ space.
 ![](./img/10-26-13-42-05.png)
 
 
-**Performance optimization.** If d(w) was not updated in iteration i – 1, then no reason to consider edges entering w in iteration i.
+**Performance optimization.** If d(w) was not updated in iteration i - 1, then no reason to consider edges entering w in iteration i.
 
 ![](./img/10-26-13-18-06.png)
 
