--- a/docs/course/EI333/0309-UML.md
+++ b/docs/course/EI333/0309-UML.md
@@ -14,7 +14,7 @@ Week 2 of 2020 Spring. Modeling with UML
 
 **KeyWords**: Software Engineering, UML
 
-<!--more
+<!--more-->
 
 
 
@@ -36,9 +36,9 @@ Darwinian forces in the marketplace led to three dominate methods, each having i
 
 ### 1.2 Three Dominant Methods
 
-- Object-oriented Analysis & Design (OOAD) –Grady Booch
-- The Object Modeling Technique (OMT) –Jim Rumbaugh
-- The Object-oriented Software Engineering method (OOSE) –IvarJacobson
+- Object-oriented Analysis & Design (OOAD) -Grady Booch
+- The Object Modeling Technique (OMT) -Jim Rumbaugh
+- The Object-oriented Software Engineering method (OOSE) -IvarJacobson
 Each one had its strengths and weaknesses.
 
 1. Booch (OOAD)
@@ -170,7 +170,7 @@ Diagrams and System Model:
 
 ## 4. UML Diagrams
 Diagrams | Functions
------> | ---
+--- | ---
 Use case| Describe the **functional behavior** of the system as seen by the user
 Class | Describe **the static structure** of the system
 Interaction | Describe **the dynamic behavior between objects** of the system
