--- a/docs/course/EI339/1016_mdp.md
+++ b/docs/course/EI339/1016_mdp.md
@@ -69,7 +69,7 @@ $$
   - Expectimax trees max over all actions to compute the optimal values
   > Deficiency both in runtime performance and intuition
 ![](./img/10-16-11-08-44.png)
-- If we fixed some policy p(s), then the tree would be simpler – only one action per state 
+- If we fixed some policy p(s), then the tree would be simpler - only one action per state 
   -  ... though the tree’s value would depend on which policy we fixed
   > Let $\pi(s)$ tell us what to do next (instead of traversing all the nodes below)
 
@@ -122,7 +122,7 @@ $$
 
 ### Problems with Value Iteration
 
-- Problem 1: It’s slow – $O(S^2 A)$ per iteration
+- Problem 1: It’s slow - $O(S^2 A)$ per iteration
 - Problem 2: The “max” at each state rarely changes
 - Problem 3: The policy often converges long before the values
 
